backend/deployments/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devpulse-api
  labels:
    app: devpulse-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: devpulse-api
